--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "laravel/framework": "^11.9",
         "laravel/pulse": "^1.2",
         "laravel/tinker": "^2.9",
-        "tomatophp/filament-users": "*"
+        "tomatophp/filament-media-manager": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
