--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "bezhansalleh/filament-shield": "^3.2",
         "dotswan/filament-laravel-pulse": "^1.1",
         "eightynine/filament-advanced-widgets": "^3.0",
         "filament/filament": "^3.2",
