--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "dotswan/filament-laravel-pulse": "^1.1",
         "eightynine/filament-advanced-widgets": "^3.0",
         "filament/filament": "^3.2",
+        "firefly/filament-blog": "^2.0",
         "laravel/framework": "^11.9",
         "laravel/pulse": "^1.2",
         "laravel/tinker": "^2.9",
