--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "eightynine/filament-advanced-widgets": "^3.0",
         "filament/filament": "^3.2",
         "firefly/filament-blog": "^2.0",
+        "hugomyb/filament-media-action": "^3.1",
         "laravel/framework": "^11.9",
         "laravel/pulse": "^1.2",
         "laravel/tinker": "^2.9",
